# ZachAI

./: .gitattributes  .gitignore  ACTIVE_FILES.md  CLAUDE.md  README.md  RULES.md  backup.bat
.claude/: launch.json  settings.json  settings.local.json
backtest/: mnq_backtest.py
companies/wpflow/: .env.example  .gitignore  ACTIVE_FILES.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  MONETIZATION.md  PRICING.md  PRIVACY.md  README.md  config.py  errors.py  pyproject.toml  requirements.txt  server.py  test_server.py  wp_client.py
companies/wpflow/data/: INGESTION.md
companies/wpflow/docs/: app_password_setup.md
companies/wpflow/launch/: 00_LAUNCH_RUNBOOK.md  01_demo_video_script.md  02_mcpize_listing.md  03_reddit_r_mcp.md  04_reddit_r_claudeai.md  05_hn_show_hn.md  06_devto_post.md  07_x_thread.md  metrics_day1.md
companies/wpflow/src/wpflow/: __init__.py  server.py  wp_client.py
companies/wpflow/src/wpflow/tools/: __init__.py  comments.py  health.py  media.py  pages.py  plugins.py  posts.py  taxonomy.py  themes.py  users.py
companies/wpflow/tools/: _common.py  comments.py  health.py  media.py  pages.py  plugins.py  posts.py  taxonomy.py  themes.py  users.py
dashboard/: start_dashboard.vbs
data/: risk_state.json  state.json
ictbot/: .env.example  .gitignore  ACTIVE_FILES.md  CLAUDE.md  cli.py  config.py  main.py  requirements.txt
jarvis-field-tech/: .env.example  .gitignore  ACTIVE_FILES.md  README.md  requirements.txt
kalshi/: .env.example  ACTIVE_FILES.md  CLAUDE.md  requirements.txt  start_bot.vbs  start_dashboard.vbs  start_tunnel.bat
longshot/: .env.example  .gitignore  ACTIVE_FILES.md  CLAUDE.md  cli.py  config.py  main_longshot.py  requirements.txt  run_dashboard.bat  run_longshot.bat
omnialpha/: cli.py  (+10 more)
(+398 files in other folders)
