[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wpflow"
version = "0.1.0"
description = "WordPress operator MCP server — 25 task-scoped tools for Claude and other LLM agents. App-password auth, REST API, local-first, stdio transport."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zach Edwards" }]
keywords = ["mcp", "wordpress", "wp", "claude", "anthropic", "llm", "agent", "rest-api", "automation", "cms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.2.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/zedwards1226/wpflow"
Repository = "https://github.com/zedwards1226/wpflow"
Issues = "https://github.com/zedwards1226/wpflow/issues"
Documentation = "https://github.com/zedwards1226/wpflow#readme"

[project.scripts]
wpflow = "wpflow.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wpflow = ["py.typed"]
